--- a/index.html
+++ b/index.html
@@ -7,33 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+    <main class="container">
         <div class="row">
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
-            <div class="col-1 border">1</div>
+            <!-- Left Col -->
+            <div class="col-12 col-lg-9 bg-primary">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique doloremque aut incidunt. Quae adipisci repellat quasi esse unde nulla nihil facere, nemo delectus officiis iusto vero doloribus ipsum consequuntur velit?</p>
+            </div>
+            <!-- Right Col -->
+            <div class="col-12 col-lg-3 bg-secondary">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique doloremque aut incidunt. Quae adipisci repellat quasi esse unde nulla nihil facere, nemo delectus officiis iusto vero doloribus ipsum consequuntur velit?</p>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-4 border">4</div>
-            <div class="col-4 border">4</div>
-            <div class="col-4 border">4</div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-sm-6 col-md-4 border">3</div>
-            <div class="col-12 col-sm-6 col-md-4 border">3</div>
-            <div class="col-12 col-sm-6 col-md-4 border">3</div>
-            <div class="col-12 col-sm-6 col-md-4 border">3</div>
-            <div class="col-12 col-md-4 border">3</div>
-        </div>
-    </div>
+        
+    </main>
 </body>
 </html>
