split left col into 12 col row space & created two div col-lg 8 & 4 respectively

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
         <div class="row">
             <!-- Left Col -->
             <div class="col-12 col-lg-9 bg-primary">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique doloremque aut incidunt. Quae adipisci repellat quasi esse unde nulla nihil facere, nemo delectus officiis iusto vero doloribus ipsum consequuntur velit?</p>
+                <div class="row">
+                    <div class="col-12 col-lg-8 bg-dark">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
+                    </div>
+                    <div class="col-12 col-lg-4 bg-success">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
+                    </div>
+                </div>
             </div>
             <!-- Right Col -->
             <div class="col-12 col-lg-3 bg-secondary">
