two more cols added in main row left col, the oother way arround split into col-lg 4 & 8 respectively

--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 <body>
     <main class="container">
         <div class="row">
-            <!-- Left Col -->
+            <!-- Left Col --> 
             <div class="col-12 col-lg-9 bg-primary">
                 <div class="row">
                     <div class="col-12 col-lg-8 bg-dark">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
                     </div>
                     <div class="col-12 col-lg-4 bg-success">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
+                    </div>
+                    <div class="col-12 col-lg-4 bg-danger">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
+                    </div>
+                    <div class="col-12 col-lg-8 bg-warning">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
                     </div>
                 </div>
