--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap 5</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <style>
+        @media (min-width: 992px) { 
+            .alto-100 {
+                height: 100vh;
+            }
+         }
+    </style>
 </head>
 <body>
-    <main class="container">
+    <main class="container d-flex align-items-center justify-content-center alto-100">
         <div class="row">
             <!-- Left Col --> 
             <div class="col-12 col-lg-9 bg-primary">
