added imgs assets

--- a/index.html
+++ b/index.html
@@ -18,18 +18,24 @@
     <main class="container d-flex align-items-center justify-content-center alto-100">
         <div class="row">
             <!-- Left Col --> 
-            <div class="col-12 col-lg-9 bg-primary">
+            <div class="col-12 col-lg-9">
                 <div class="row">
-                    <div class="col-12 col-lg-8 bg-dark">
+                    <div class="col-12 col-lg-8 bg-success">
+                        <article class="card">
+                            <div class="card-body">
+                                <div class="d-flex">
+                                    <img src="" alt="">
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-12 col-lg-4 bg-primary">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
                     </div>
-                    <div class="col-12 col-lg-4 bg-success">
+                    <div class="col-12 col-lg-4 bg-warning">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
                     </div>
-                    <div class="col-12 col-lg-4 bg-danger">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
-                    </div>
-                    <div class="col-12 col-lg-8 bg-warning">
+                    <div class="col-12 col-lg-8 bg-danger">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
                     </div>
                 </div>
