Spacing, Typograohy, Card height 100%

--- a/index.html
+++ b/index.html
@@ -21,28 +21,92 @@
             <div class="col-12 col-lg-9">
                 <div class="row">
                     <div class="col-12 col-lg-8 bg-success">
-                        <article class="card">
+                        <article class="card h-100">
                             <div class="card-body">
                                 <div class="d-flex">
-                                    <img src="" alt="">
+                                    <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                    <div class="ps-3">
+                                        <h6 class="m-0 h6">Daniel Clifford</h6>
+                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
                                 </div>
                             </div>
                         </article>
                     </div>
                     <div class="col-12 col-lg-4 bg-primary">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
+                        <article class="card h-100">
+                            <div class="card-body">
+                                <div class="d-flex">
+                                    <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                    <div class="ps-3">
+                                        <h6 class="m-0 h6">Daniel Clifford</h6>
+                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                </div>
+                            </div>
+                        </article>
                     </div>
                     <div class="col-12 col-lg-4 bg-warning">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
+                        <article class="card h-100">
+                            <div class="card-body">
+                                <div class="d-flex">
+                                    <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                    <div class="ps-3">
+                                        <h6 class="m-0 h6">Daniel Clifford</h6>
+                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                </div>
+                            </div>
+                        </article>
                     </div>
                     <div class="col-12 col-lg-8 bg-danger">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos et impedit nostrum delectus? Quia eaque odit magnam deserunt illum dolore officiis deleniti eligendi dolorem voluptas, ab illo possimus reiciendis.</p>
+                        <article class="card h-100">
+                            <div class="card-body">
+                                <div class="d-flex">
+                                    <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                    <div class="ps-3">
+                                        <h6 class="m-0 h6">Daniel Clifford</h6>
+                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                </div>
+                            </div>
+                        </article>
                     </div>
                 </div>
             </div>
             <!-- Right Col -->
             <div class="col-12 col-lg-3 bg-secondary">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique doloremque aut incidunt. Quae adipisci repellat quasi esse unde nulla nihil facere, nemo delectus officiis iusto vero doloribus ipsum consequuntur velit?</p>
+                <article class="card h-100">
+                            <div class="card-body">
+                                <div class="d-flex">
+                                    <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                    <div class="ps-3">
+                                        <h6 class="m-0 h6">Daniel Clifford</h6>
+                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                </div>
+                            </div>
+                        </article>
             </div>
         </div>
         
