--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <!-- Left Col --> 
             <div class="col-12 col-lg-9">
                 <div class="row">
-                    <div class="col-12 col-lg-8 bg-success">
-                        <article class="card h-100">
+                    <div class="col-12 col-lg-8">
+                        <article class="card h-100 bg-success">
                             <div class="card-body">
-                                <div class="d-flex">
+                                <div class="d-flex mb-3">
                                     <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h6 class="m-0 h6">Daniel Clifford</h6>
@@ -37,11 +37,11 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-12 col-lg-4 bg-primary">
-                        <article class="card h-100">
+                    <div class="col-12 col-lg-4">
+                        <article class="card h-100 bg-primary">
                             <div class="card-body">
-                                <div class="d-flex">
-                                    <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                <div class="d-flex mb-3">
+                                    <img src="./images/image-jeanette.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h6 class="m-0 h6">Daniel Clifford</h6>
                                         <p class="m-0 h6">Lorem, ipsum.</p>
@@ -49,16 +49,15 @@
                                 </div>
                                 <div>
                                     <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
-                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
                                 </div>
                             </div>
                         </article>
                     </div>
-                    <div class="col-12 col-lg-4 bg-warning">
-                        <article class="card h-100">
+                    <div class="col-12 col-lg-4">
+                        <article class="card h-100 bg-warning">
                             <div class="card-body">
-                                <div class="d-flex">
-                                    <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                <div class="d-flex mb-3">
+                                    <img src="./images/image-jonathan.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h6 class="m-0 h6">Daniel Clifford</h6>
                                         <p class="m-0 h6">Lorem, ipsum.</p>
@@ -66,16 +65,15 @@
                                 </div>
                                 <div>
                                     <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
-                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
                                 </div>
                             </div>
                         </article>
                     </div>
-                    <div class="col-12 col-lg-8 bg-danger">
-                        <article class="card h-100">
+                    <div class="col-12 col-lg-8">
+                        <article class="card h-100 bg-danger">
                             <div class="card-body">
-                                <div class="d-flex">
-                                    <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                <div class="d-flex mb-3">
+                                    <img src="./images/image-kira.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h6 class="m-0 h6">Daniel Clifford</h6>
                                         <p class="m-0 h6">Lorem, ipsum.</p>
@@ -91,11 +89,11 @@
                 </div>
             </div>
             <!-- Right Col -->
-            <div class="col-12 col-lg-3 bg-secondary">
-                <article class="card h-100">
+            <div class="col-12 col-lg-3">
+                <article class="card h-100 bg-secondary">
                             <div class="card-body">
                                 <div class="d-flex">
-                                    <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                    <img src="./images/image-patrick.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h6 class="m-0 h6">Daniel Clifford</h6>
                                         <p class="m-0 h6">Lorem, ipsum.</p>
