--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap 5</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="./sass/custom.css">
 
     <style>
         @media (min-width: 992px) { 
@@ -20,7 +21,7 @@
             <!-- Left Col --> 
             <div class="col-12 col-lg-9">
                 <div class="row">
-                    <div class="col-12 col-lg-8">
+                    <div class="col-12 col-lg-8 p-2">
                         <article class="card h-100 bg-success">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
@@ -37,7 +38,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-12 col-lg-4">
+                    <div class="col-12 col-lg-4 p-2">
                         <article class="card h-100 bg-primary">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
@@ -53,7 +54,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-12 col-lg-4">
+                    <div class="col-12 col-lg-4 p-2">
                         <article class="card h-100 bg-warning">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
@@ -69,7 +70,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-12 col-lg-8">
+                    <div class="col-12 col-lg-8 p-2">
                         <article class="card h-100 bg-danger">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
@@ -89,7 +90,7 @@
                 </div>
             </div>
             <!-- Right Col -->
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 p-2">
                 <article class="card h-100 bg-secondary">
                             <div class="card-body">
                                 <div class="d-flex">
