--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,300;0,600;0,900;1,100;1,700&display=swap" rel="stylesheet"> 
     
     <link rel="stylesheet" href="./sass/custom.css">
-
-    <style>
-        @media (min-width: 992px) { 
-            .alto-100 {
-                height: 100vh;
-            }
-         }
-    </style>
 </head>
 <body>
     <main class="container d-flex align-items-center justify-content-center alto-100">
@@ -25,7 +17,7 @@
             <div class="col-12 col-lg-9">
                 <div class="row">
                     <div class="col-12 col-lg-8 p-2">
-                        <article class="card h-100 bg-success">
+                        <article class="card h-100 bg-primary text-white fondo-card shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
@@ -42,7 +34,7 @@
                         </article>
                     </div>
                     <div class="col-12 col-lg-4 p-2">
-                        <article class="card h-100 bg-primary">
+                        <article class="card h-100 bg-success text-white shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-jeanette.jpg" alt="" class="border border-secondary border-3 rounded-circle">
@@ -58,7 +50,7 @@
                         </article>
                     </div>
                     <div class="col-12 col-lg-4 p-2">
-                        <article class="card h-100 bg-warning">
+                        <article class="card h-100 bg-secondary shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-jonathan.jpg" alt="" class="border border-secondary border-3 rounded-circle">
@@ -74,7 +66,7 @@
                         </article>
                     </div>
                     <div class="col-12 col-lg-8 p-2">
-                        <article class="card h-100 bg-danger">
+                        <article class="card h-100 bg-dark text-white shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-kira.jpg" alt="" class="border border-secondary border-3 rounded-circle">
@@ -94,7 +86,7 @@
             </div>
             <!-- Right Col -->
             <div class="col-12 col-lg-3 p-2">
-                <article class="card h-100 bg-secondary">
+                <article class="card h-100 bg-secondary shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex">
                                     <img src="./images/image-patrick.jpg" alt="" class="border border-secondary border-3 rounded-circle">
