Added copy text to replace lorem ipsum

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                                     <img src="./images/image-daniel.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h6 class="m-0 h6">Daniel Clifford</h6>
-                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                        <p class="m-0 h6">Verified Graduate</p>
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
-                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="h6">I received a job offer mid-course, and the subjects I learned were currrent, if not more so, in the company I jonined. I honestly feel I got every penny´s worth.</p>
+                                    <p class="fs-6 lh-1">"I was an EMT for many years before I joined the bootcamp. I´ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it increadibly fun! I enrrolled shortly tthereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I´ve successfuully switched careers, working as a Software Engineer at VR startup."</p>
                                 </div>
                             </div>
                         </article>
@@ -39,12 +39,13 @@
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-jeanette.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
-                                        <h6 class="m-0 h6">Daniel Clifford</h6>
-                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                        <h6 class="m-0 h6">Jonathan Walters</h6>
+                                        <p class="m-0 h6">Verified Graduate</p>
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="h6">The team was very supportive and kept me motivated</p>
+                                    <p class="fs-6 lh-1">"I started as a total newbie with virtually no coding skills. i now work as a mobile engineer for a big company. This was one of the best investments I´ve made myself."</p>
                                 </div>
                             </div>
                         </article>
@@ -55,12 +56,13 @@
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-jonathan.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
-                                        <h6 class="m-0 h6">Daniel Clifford</h6>
-                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                        <h6 class="m-0 h6">Jeanette Harmon</h6>
+                                        <p class="m-0 h6">Verified Graduate</p>
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="h6">An overall wonderful and rewarding experience</p>
+                                    <p class="fs-6 lh-1">"Thank you for the wonderful experience! i now have a job I really enjoy, and make a good living while something i love."</p>
                                 </div>
                             </div>
                         </article>
@@ -71,13 +73,13 @@
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-kira.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
-                                        <h6 class="m-0 h6">Daniel Clifford</h6>
-                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                        <h6 class="m-0 h6">Patrick Abrams</h6>
+                                        <p class="m-0 h6">Verified Gradute</p>
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
-                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="h6">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</p>
+                                    <p class="fs-6 lh-1">"The staff seem genuinely concerned abouot my progress which i find rerally refreshing. The progrram gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standar iis above the rest. You will get the personal attetion you need frrrom an incredible community of smart and amazing people."</p>
                                 </div>
                             </div>
                         </article>
@@ -91,13 +93,13 @@
                                 <div class="d-flex">
                                     <img src="./images/image-patrick.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
-                                        <h6 class="m-0 h6">Daniel Clifford</h6>
-                                        <p class="m-0 h6">Lorem, ipsum.</p>
+                                        <h6 class="m-0 h6">Kira Whittle</h6>
+                                        <p class="m-0 h6">Verified Graduate</p>
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
-                                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aliquid voluptatem aliquam fugit, odio quae dolorum possimus delectus temporibus nisi. Vel itaque veniam quibusdam nobis enim minus ut dolore fuga.</p>
+                                    <p class="h6">Such a life-changing experience. Highly recommended!</p>
+                                    <p class="fs-6 lh-1">"Before joining the bootcamp, I´ve never written a line of code, I needed some structure from professionals who can help me learn programming step by step, i was encouraged to enroll by a former students of theirs who can only say wonderrful things about the program. the entire curriculum and staff did not disappoint. They were very hands-on and i never had to wait long for assitance. TThe agile team project, in particular, was outstanding. It took my learning to the next level in way that no tutorial couuld ever have. In fact, I´ve often referred to it during interviews as an example of my development experience. It certaninly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend!"</p>
                                 </div>
                             </div>
                         </article>
